# python3-module-template

./: README-pypi.md  README.md  environment.yml  pyproject.toml
python3_template/: __init__.py  constants.py  core.py
